SequenceManager: Cross thread delayed task calls WillQueueTask once

Bug: 826902
Change-Id: Ic79292edea1d7d92935797103ded169cb114e1cf
Reviewed-on: https://chromium-review.googlesource.com/1254542
Commit-Queue: Alex Clarke <alexclarke@chromium.org>
Reviewed-by: Alexander Timin <altimin@chromium.org>
Reviewed-by: Gabriel Charette <gab@chromium.org>
Cr-Commit-Position: refs/heads/master@{#595848}
Former-commit-id: 2f811807dfa95df471a01e78020e776d0ab2614f